welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: illegal start of simple expression
	var nbBis = 0
        ^